@@ -1,3 +1,14 @@
+2011-09-29  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[doc] Document builtin type converters.
+
+	* doc/Makefile.am (guile_pg_TEXINFOS): Add coltypes.texi.
+	(EXTRA_DIST): Likewise.
+	(coltypes.texi): New target.
+	* doc/ref.texh (Consulting Existing Type Converters):
+	Add heading "Builtin Converters" and blurb;
+	@include coltypes.texi in a @example block.
+
 2011-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[boot] Use INSTALL.UTF-8 from gnulib for INSTALL.
